@@ -20,6 +20,7 @@ PHP                                                                        NEWS
    (Andrey)
   . Fixed bug #70456 (mysqlnd doesn't activate TCP keep-alive when connecting to
     a server). (Sergei Turchanov)
+  . Fixed bug #70572 segfault in mysqlnd_connect. (Andrey, Remi)
 
 - OpenSSL:
   . Fixed bug #55259 (openssl extension does not get the DH parameters from 
